--- a/web_02/index.html
+++ b/web_02/index.html
@@ -88,7 +88,7 @@
 	</div>
 
 </body>
-<script src="http://s0.qhimg.com/lib/jquery/183.js" ></script>
+<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js" ></script>
 <script type="text/javascript">
 	(function(){
 
