--- a/原生JS节点操作/children与childNodes区别.html
+++ b/原生JS节点操作/children与childNodes区别.html
@@ -5,6 +5,11 @@
 	<meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<title>children与childNodes区别</title>
+    <style type="text/css">
+        ul li{
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
 <body>
 <ul id="ul1">
