--- a/js filter函数使用.html
+++ b/js filter函数使用.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>Document</title>
+	<title></title>
 	<script type="text/javascript">
 		// js 自带的 filter()方法: 它用于把Array的某些元素过滤掉，然后返回剩下的元素组成的数组。
 		// array.filter(callback[, thisObject]);
