--- a/原生js开发的插件/drag/index.html
+++ b/原生js开发的插件/drag/index.html
@@ -1,37 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Document</title>
-    <script src="jquery-1.11.3.min.js"></script>
-    <script src="drag.js?3"></script>
-    <style>
-        * {
-            -webkit-box-sizing: border-box;
-            -moz-box-sizing: border-box;
-            box-sizing: border-box;
-        }
-        ul,li {
-            list-style: none;
-        }
-        ul {
-            width:200px;
-        }
-        li {
-            margin-top: 10px;
-            width:200px;
-            height:30px;
-            line-height: 30px;
-            font-size:14px;
-            padding:0 5px;
-            border:1px solid #ccc;
-            cursor:pointer;
-            background: #F6F8FA;
-            border: 1px solid #D3D9E0;
-            border-radius: 2px;
-            
-        }
-    </style>
+<meta charset="UTF-8">
+<title>Document</title>
+<script src="jquery.min.js"></script>
+<script src="drag.js"></script>
+<style>
+ul,li{list-style:none;user-select: none;}
+ul{width:200px;}
+li{margin-top: 10px;width:200px;height:30px;line-height: 30px;font-size:14px;padding:0 5px;border:1px solid #ccc;cursor:pointer;background: #F6F8FA;border: 1px solid #D3D9E0;border-radius: 2px;}
+</style>
 </head>
 <body>
 <ul class="options">
