--- a/图片懒加载/index.html
+++ b/图片懒加载/index.html
@@ -7,16 +7,16 @@ img {display: block;width: 100%;height: auto;}
 </style>
 </head>
 <body>
-<img src="img/default.png" data-src="img/1.png">
-<img src="img/default.png" data-src="img/2.png">
-<img src="img/default.png" data-src="img/3.png">
-<img src="img/default.png" data-src="img/4.png">
-<img src="img/default.png" data-src="img/5.png">
-<img src="img/default.png" data-src="img/6.png">
-<img src="img/default.png" data-src="img/7.png">
-<img src="img/default.png" data-src="img/8.png">
-<img src="img/default.png" data-src="img/9.png">
-<img src="img/default.png" data-src="img/10.png">
+<img src="img/default.png" data-src="img/img1.png">
+<img src="img/default.png" data-src="img/img2.png">
+<img src="img/default.png" data-src="img/img3.png">
+<img src="img/default.png" data-src="img/img4.png">
+<img src="img/default.png" data-src="img/img5.png">
+<img src="img/default.png" data-src="img/img6.png">
+<img src="img/default.png" data-src="img/img7.png">
+<img src="img/default.png" data-src="img/img8.png">
+<img src="img/default.png" data-src="img/img9.png">
+<img src="img/default.png" data-src="img/img10.png">
 <script type="text/javascript"> 
     var imgs  = document.querySelectorAll('img'),len = imgs.length; 
     var n = 0;//存储图片加载到的位置，避免每次都从第一张图片开始遍历  
