--- a/ios端position为fixed失效的解决办法/index.html
+++ b/ios端position为fixed失效的解决办法/index.html
@@ -12,7 +12,7 @@
     <div class="search-inputbox" id="searchInputbox">
       <div class="inputbox">
         <div class="input-area">
-          <input id="inputForm" type="text" name="" placeholder="搜索答主或定向问题" value="">
+          <input id="inputForm" type="text" name="" placeholder="输入内容搜索" value="">
           <i class="search-icon"></i>
         </div>
       </div>
