--- a/js中获取css样式属性值.html
+++ b/js中获取css样式属性值.html
@@ -38,5 +38,6 @@ function getStyle(obj, attr,pseudoElt=false){
     }
     //return obj.currentStyle?obj.currentStyle[attr]:getComputedStyle(obj,pseudoElt)[attr]
 }
+//详细链接  https://www.cnblogs.com/zuobaiquan01/p/8461754.html
 </script>
 </html>
