--- a/js filter函数使用.html
+++ b/js filter函数使用.html
@@ -5,6 +5,8 @@
 	<title></title>
 	<script type="text/javascript">
 		// js 自带的 filter()方法: 它用于把Array的某些元素过滤掉，然后返回剩下的元素组成的数组。
+		// js数组中filter、map、reduce、find等方法实现的原理
+		// https://www.cnblogs.com/LVBingo/articles/11234177.html
 		// array.filter(callback[, thisObject]);
 		// 参数说明：callback：要对每个数组元素执行的回调函数。
 		// 调用时使用参数 element(数组的每一个元素), index(数组的索引), array(数组本身)
