--- a/js对象和数组深克隆.html
+++ b/js对象和数组深克隆.html
@@ -1,35 +1,78 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title>js对象和数组深克隆</title>
-  </head>
-  <body>
+</head>
 
-  </body>
-  <script type="text/javascript">
-  function clone (obj) {
-      var o;
-      if(typeof obj == "object") {
-          if(obj === null) {
-              o = null;
-          } else {
-              if(obj instanceof Array) {
-                  o = [];
-                  for (var i = 0, len = obj.length; i < len; i++) {
-                      o.push(this.clone(obj[i]));
-                  }
-              } else {
-                  o = {};
-                  for (var j in obj) {
-                      o[j] = this.clone(obj[j]);
-                  }
-              }
-          }
-      } else {
-          o = obj;
-      }
-      return o;
-  }
-  </script>
+<body>
+
+</body>
+<script type="text/javascript">
+    function clone(obj) {
+        var o;
+        if (typeof obj == "object") {
+            if (obj === null) {
+                o = null;
+            } else {
+                if (obj instanceof Array) {
+                    o = [];
+                    for (var i = 0, len = obj.length; i < len; i++) {
+                        o.push(this.clone(obj[i]));
+                    }
+                } else {
+                    o = {};
+                    for (var j in obj) {
+                        o[j] = this.clone(obj[j]);
+                    }
+                }
+            }
+        } else {
+            o = obj;
+        }
+        return o;
+    }
+</script>
+<script>
+    function typeOf(obj) {
+        const map = {
+            '[object Boolean]': 'boolean',
+            '[object Number]': 'number',
+            '[object String]': 'string',
+            '[object Function]': 'function',
+            '[object Array]': 'array',
+            '[object Date]': 'date',
+            '[object RegExp]': 'regExp',
+            '[object Undefined]': 'undefined',
+            '[object Null]': 'null',
+            '[object Object]': 'object',
+        }
+        return map[Object.prototype.toString.call(obj)];
+    }
+
+    // deepCopy
+    function deepCopy(data) {
+        const dataType = typeOf(data);
+        let result
+        if (dataType === 'array') {
+            result = []
+        } else if (dataType === 'object') {
+            result = {}
+        } else {
+            return data
+        }
+        if (dataType === 'array') {
+            for (let i = 0; i < data.length; i++) {
+                result.push(deepCopy(data[i]));
+            }
+        } else if (t === 'object') {
+            for (let i in data) {
+                result[i] = deepCopy(data[i]);
+            }
+        }
+        return result
+    }
+</script>
+
 </html>
