--- a/两种路由模式的比较/hash-router.html
+++ b/两种路由模式的比较/hash-router.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>luyou</title>
@@ -11,74 +12,62 @@
         }
     </style>
 </head>
+
 <body>
-    <ul> 
-        <li><a href="#/">turn white</a></li> 
-        <li><a href="#/blue">turn blue</a></li> 
-        <li><a href="#/green">turn green</a></li> 
-        <li><a href="#/pink">turn pink</a></li> 
-    </ul> 
+    <ul>
+        <li><a href="#/">turn white</a></li>
+        <li><a href="#/blue">turn blue</a></li>
+        <li><a href="#/green">turn green</a></li>
+        <li><a href="#/pink">turn pink</a></li>
+    </ul>
     <div class="box"></div>
 </body>
+
 </html>
 <script>
-    function HashRouter(opts) {
-        this.routes = opts.routes || {};//路由表
-        this.currentUrl = ''; //当前路由
-    }
-    HashRouter.prototype.route = function(path, callback) {
-        this.routes[path] = callback || function(){};
-    };
-    HashRouter.prototype.refresh = function() {
-        this.currentUrl = location.hash.slice(1) || '/';
-        this.routes[this.currentUrl]();
-    };
-    HashRouter.prototype.init = function() {
-        let obj = {};
-        if (this.routes) {
-            this.routes.forEach(function(v) {
-                obj[v.path] = v.callback || function(){};
-            })
+    class HashRouter {
+        constructor() {
+            // 存储hash与callback键值对
+            this.routes = {};
+            // 保存当前的hash
+            this.currentHash = '';
+
+            // 绑定事件
+            const hashChangeUrl = this.hashChangeUrl.bind(this);
+
+            // 页面加载事件
+            window.addEventListener('load', hashChangeUrl, false);
+            // 监听hashchange事件
+            window.addEventListener('hashchange', hashChangeUrl, false);
         }
-        this.routes = obj;
-        window.addEventListener('load', this.refresh.bind(this), false);
-        window.addEventListener('hashchange', this.refresh.bind(this), false);
-    }
-    
-    var oBox = document.querySelector('.box');
-    function changeBgColor(color) {
-        oBox.style.backgroundColor = color;
-    }
-    var routes = [
-        {
-            path: '/',
-            callback: function() {
-                changeBgColor('white');
-            }
-        },
-        {
-            path: '/blue',
-            callback: function() {
-                changeBgColor('blue');
-            }
-        },
-        {
-            path: '/green',
-            callback: function() {
-                changeBgColor('green');
-            }
+        // path路径和callback函数对应起来，并且使用 上面的this.routes存储起来
+        route(path, callback) {
+            this.routes[path] = callback || function () { };
         }
-    ]
-
-    var hashRouter = new HashRouter({
-        routes: routes
+        hashChangeUrl() {
+            /*
+             获取当前的hash值
+             location.hash 获取的值为："#/a, 因此 location.hash.slice(1) = '/a' 这样的
+            */
+            this.currentHash = location.hash.slice(1) || '/';
+            // 执行当前hash对应的callback函数
+            this.routes[this.currentHash]();
+        }
+    }
+    // 初始化
+    const Router = new HashRouter();
+    const body = document.querySelector('body');
+    const changeColor = function (color) {
+        body.style.backgroundColor = color;
+    };
+    // 注册函数
+    Router.route('/', () => {
+        changeColor('red');
     });
-    hashRouter.init();
-
-
-    hashRouter.route('/pink', function() {
-        changeBgColor('pink');
+    Router.route('/a', () => {
+        changeColor('green');
     });
-
-
+    Router.route('/b', () => {
+        changeColor('#CDDC39');
+    });
 </script>
