--- a/algorithms/js 算法类--找出数组中的最大值.html
+++ b/algorithms/js 算法类--找出数组中的最大值.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>js 算法类--对象长度</title>
+	<title>js 算法类--找出数组中的最大值</title>
 	<script type="text/javascript">
 		//方法一 reduce 
 		var arr1 = [6, 4, 1, 8, 2, 11, 3];
